--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1012 div排版</title>
+    <title>div排版</title>
 </head>
 
 <body>
     <div id="sitebody">
         <center>
-            <a href="https://jerry950511.github.io/programming-language/">回首頁</a>
+            <a href="https://xawai.github.io/lksfdngla/">上一頁</a>
         </center>
         <header>
             header
